--- a/Tirumana/Client/package.json
+++ b/Tirumana/Client/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@mui/material": "^5.4.0",
     "@mui/styled-engine-sc": "^5.3.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
